--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -2,18 +2,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:divider="?android:attr/divider">
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:foregroundGravity="left"/>
 
     <FrameLayout
         android:layout_width="wrap_content"
+        android:minWidth="400dp"
         android:layout_height="match_parent"
         android:id="@+id/detail_container"
         android:layout_toRightOf="@+id/container"
-        android:layout_toEndOf="@+id/container"/>
+        android:layout_toEndOf="@+id/container"
+        android:foregroundGravity="right"/>
 </RelativeLayout>
