--- a/app/src/main/res/layout/grid_item_movies.xml
+++ b/app/src/main/res/layout/grid_item_movies.xml
@@ -8,6 +8,7 @@
     app:cardCornerRadius="@dimen/cardview_default_radius"
     app:cardElevation="@dimen/cardview_default_elevation"
     app:cardPreventCornerOverlap="true"
+    android:background="@drawable/touch_selector"
     android:layout_margin="4dp">
 
     <LinearLayout
