--- a/app/src/main/res/layout/grid_item_movies.xml
+++ b/app/src/main/res/layout/grid_item_movies.xml
@@ -9,7 +9,7 @@
     app:cardElevation="@dimen/cardview_default_elevation"
     app:cardPreventCornerOverlap="true"
     android:background="@drawable/touch_selector"
-    android:layout_margin="4dp">
+    android:layout_margin="@dimen/card_margin">
 
     <LinearLayout
         android:layout_width="match_parent"
