--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -28,9 +28,9 @@
                 android:id="@+id/backdrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:adjustViewBounds="true"
                 android:fitsSystemWindows="true"
                 android:scaleType="centerCrop"
-                android:adjustViewBounds="true"
                 app:layout_collapseMode="parallax" />
 
             <android.support.v7.widget.Toolbar
@@ -62,76 +62,72 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:elevation="4dp"
-                app:cardCornerRadius="@dimen/cardview_default_radius"
-                app:cardElevation="@dimen/cardview_default_elevation"
-                app:cardPreventCornerOverlap="true">
+                app:cardElevation="@dimen/card_view_elevation"
+                app:cardPreventCornerOverlap="false">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content">
 
                     <android.support.v7.widget.AppCompatImageView
                         android:id="@+id/poster"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:padding="4dp"
-                        android:fitsSystemWindows="true" />
+                        android:fitsSystemWindows="true"
+                        android:padding="4dp" />
 
                     <TextView
-                        android:paddingLeft="16dp"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
-                        android:paddingTop="24dp"
                         android:id="@+id/release_date"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_toEndOf="@+id/poster"
                         android:layout_toRightOf="@+id/poster"
                         android:fontFamily="sans-serif-condensed"
-                        android:textStyle="italic"
-                        />
+                        android:paddingEnd="16dp"
+                        android:paddingLeft="16dp"
+                        android:paddingStart="16dp"
+                        android:paddingTop="24dp"
+                        android:textStyle="italic" />
 
                     <TextView
                         android:id="@+id/vote_avg"
-                        android:paddingLeft="16dp"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/release_date"
                         android:layout_toEndOf="@+id/poster"
                         android:layout_toRightOf="@+id/poster"
                         android:fontFamily="sans-serif-condensed"
+                        android:paddingEnd="16dp"
+                        android:paddingLeft="16dp"
+                        android:paddingStart="16dp"
                         android:textStyle="italic" />
 
                     <TextView
                         android:id="@+id/vote_count"
-                        android:paddingLeft="16dp"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/vote_avg"
                         android:layout_toEndOf="@+id/poster"
                         android:layout_toRightOf="@+id/poster"
                         android:fontFamily="sans-serif-condensed"
+                        android:paddingEnd="16dp"
+                        android:paddingLeft="16dp"
+                        android:paddingStart="16dp"
                         android:textStyle="italic" />
 
                     <TextView
                         android:id="@+id/popularity"
-                        android:paddingLeft="16dp"
-                        android:paddingStart="16dp"
-                        android:paddingEnd="16dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_below="@+id/vote_count"
                         android:layout_toEndOf="@+id/poster"
                         android:layout_toRightOf="@+id/poster"
                         android:fontFamily="sans-serif-condensed"
-                        android:textStyle="italic"
-                        android:paddingBottom="8dp"/>
+                        android:paddingBottom="8dp"
+                        android:paddingEnd="16dp"
+                        android:paddingLeft="16dp"
+                        android:paddingStart="16dp"
+                        android:textStyle="italic" />
 
 
                 </RelativeLayout>
@@ -139,16 +135,24 @@
 
             </android.support.v7.widget.CardView>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/overview_label"
+                android:padding="8dp"
+                android:layout_below="@+id/cardViewDetail"
+                android:fontFamily="sans-serif-condensed"
+                android:textStyle="bold"
+                android:text="@string/overview_label"/>
+
             <android.support.v7.widget.CardView
                 android:id="@+id/overview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/cardViewDetail"
+                android:layout_below="@+id/overview_label"
                 android:layout_margin="8dp"
-                android:elevation="4dp"
-                app:cardCornerRadius="@dimen/cardview_default_radius"
-                app:cardElevation="@dimen/cardview_default_elevation"
-                app:cardPreventCornerOverlap="true">
+                app:cardElevation="@dimen/card_view_elevation"
+                app:cardPreventCornerOverlap="false">
 
                 <TextView
                     android:id="@+id/overview_textView"
@@ -165,7 +169,6 @@
                 android:layout_below="@+id/overview"
                 android:fontFamily="sans-serif-condensed"
                 android:padding="8dp"
-
                 android:text="@string/trailer"
                 android:textStyle="bold" />
 
@@ -177,12 +180,29 @@
                 android:layout_below="@+id/trailer"
                 tools:targetApi="lollipop" />
 
+            <!--<TextView-->
+                <!--android:id="@+id/emptyTrailerView"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:layout_below="@+id/recycled_trailer_list_view"-->
+                <!--android:padding="@dimen/activity_horizontal_margin" />-->
+
+            <TextView
+                android:id="@+id/review"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/recycled_trailer_list_view"
+                android:fontFamily="sans-serif-condensed"
+                android:padding="8dp"
+                android:text="@string/review"
+                android:textStyle="bold" />
+
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/recycled_review_list_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/recycled_trailer_list_view"
+                android:layout_below="@id/review"
                 tools:targetApi="lollipop" />
 
 
