--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -38,8 +38,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center_horizontal"
-        android:padding="@dimen/empty_view_padding"
-        android:text="@string/no_movie_data_available"/>
-
-
+        android:gravity="center_horizontal"
+        android:paddingTop="32dp"/>
 </LinearLayout>
